<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_main_gradient">

    <TextView
        android:id="@+id/create_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_m"
        android:gravity="center"
        android:text="@string/to_create"
        android:textSize="@dimen/dimen_m"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qr_code_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_xs"
                android:text="@string/qr_code"
                android:textSize="@dimen/dimen_m"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/qr_type_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dimen_s"
                android:layout_marginTop="@dimen/dimen_xs"
                android:layout_marginEnd="@dimen/dimen_s"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qr_code_tv"
                tools:listitem="@layout/item_qr_code_type" />

            <TextView
                android:id="@+id/barcode_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_xs"
                android:text="@string/barcode"
                android:textSize="@dimen/dimen_m"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_m"
                app:layout_constraintTop_toBottomOf="@id/qr_type_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/barcode_type_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dimen_s"
                android:layout_marginTop="@dimen/dimen_xs"
                android:layout_marginEnd="@dimen/dimen_s"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="@dimen/dimen_xxl"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barcode_tv"
                tools:listitem="@layout/item_barcode_type" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>